--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Full stack application that allows individuals to visualize various different sorts"
+      content="Full stack application that allows individuals to visualize various different sorts through unique colours"
     />
     <meta 
       property="og:image"
-      content="%PUBLIC_URL%/3Dsort.jpg"
+      content="%PUBLIC_URL%/3Dsort.png"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
