--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta 
       property="og:image"
-      content="%PUBLIC_URL%/3Dsort.png"
+      content="%PUBLIC_URL%/sort.png"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
